<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileScreen">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/home"
        android:tint="#00bcd4"

        android:backgroundTint="#ffffff"
        android:layout_marginRight="63dp"
        android:layout_marginTop="179dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp" />
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/colorPrimary"

        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="4dp"
            android:contentInsetLeft="3dp">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"



        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/pr"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#00bcd4"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="MY PROFILE"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:textStyle="bold|italic"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="WELCOME"
            android:id="@+id/welcome"

            android:textColor="#00bcd4"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:id="@+id/emaill"


            android:textColor="#00bcd4"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:fontFamily="monospace"/>




        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:singleLine="true" />










        <Button
            android:id="@+id/send"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00bcd4"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00bcd4"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold" />




        <Button
            android:id="@+id/sending_pass_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="change password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Delete Account"
            android:textStyle="bold" />



    </LinearLayout>
</ScrollView>

</RelativeLayout>